fix(spec): require .mvn/jvm.config for Error Prone and verify claims when planning